[gd_scene load_steps=12 format=3 uid="uid://cvn0lseqopj48"]

[ext_resource type="Script" uid="uid://cuf4h6fmfb4gf" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Shader" uid="uid://wcc1hq41v3pw" path="res://images/pause_menu.gdshader" id="2_kukqi"]
[ext_resource type="Script" uid="uid://ca53kl5g0gpct" path="res://scripts/audio_control.gd" id="3_7l7mv"]
[ext_resource type="Script" uid="uid://djkr85wg64phi" path="res://scripts/fullscreen_control.gd" id="4_v4r4p"]
[ext_resource type="AudioStream" uid="uid://cxe4v4lidm1ga" path="res://audios/Kim Lightyear - Magic Tales (Dear Diary Loop).mp3" id="5_1s2dm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uahpa"]
shader = ExtResource("2_kukqi")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_7l7mv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5d2l8"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.886000042085]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4r4p"]
_data = {
&"RESET": SubResource("Animation_7l7mv"),
&"blur": SubResource("Animation_5d2l8")
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_88e76"]
color = Color(1, 1, 1, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_knqa7"]
color = Color(0.7105787, 0.11149172, 0.9632737, 1)
thickness = 4

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_uahpa")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -196.0
offset_right = 384.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "Resume
"
icon_alignment = 1

[node name="Options" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "Options
"

[node name="Exit" type="Button" parent="PanelContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v4r4p")
}

[node name="OptionsMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -192.0
offset_right = 320.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="OptionsMenu"]
layout_mode = 0
offset_left = 208.0
offset_top = 320.0
offset_right = 432.0
offset_bottom = 368.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Back
"

[node name="AudioControl" type="HSlider" parent="OptionsMenu"]
layout_mode = 0
offset_left = 64.0
offset_top = 112.0
offset_right = 576.0
offset_bottom = 176.0
theme_override_styles/slider = SubResource("StyleBoxLine_88e76")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_knqa7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_knqa7")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("3_7l7mv")
audio_bus_name = "Master"

[node name="Label" type="Label" parent="OptionsMenu/AudioControl"]
layout_mode = 0
offset_top = -8.0
offset_right = 512.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 16
text = "Music"
horizontal_alignment = 1

[node name="FullscreenControl" type="CheckButton" parent="OptionsMenu"]
layout_mode = 0
offset_left = 416.0
offset_top = 168.0
offset_right = 576.0
offset_bottom = 232.0
text = "FullScreen"
script = ExtResource("4_v4r4p")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1s2dm")

[connection signal="pressed" from="PanelContainer/Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="OptionsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="OptionsMenu/AudioControl" to="OptionsMenu/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="OptionsMenu/FullscreenControl" to="OptionsMenu/FullscreenControl" method="_on_toggled"]
